C_FILES = $(srcdir)/producer-consumer.c  $(srcdir)/devicesconf.c
AADL_FILES = $(srcdir)/producer_consumer.aadl $(srcdir)/software.aadl
SCENARIO_FILE = $(srcdir)/scenario.aadl

include $(srcdir)/../../Makefile.common

EXTRA_DIST = $(AADL_FILES) $(SCENARIO_FILE) $(C_FILES)

CLEANDIRS = pc_simple_impl
